--- a/Main/templates/cover.html
+++ b/Main/templates/cover.html
@@ -32,7 +32,7 @@
                 <span
                    class="txt-rotate"
                    data-period="1000"
-                   data-rotate='["developing software", "Machine learning", "playing tennis",]'>
+                   data-rotate='["developing software", "machine learning", "playing tennis"]'>
                 </span>
             </div>
         </div>
