--- a/Main/static/css/style1.css
+++ b/Main/static/css/style1.css
@@ -47,7 +47,7 @@ html, body{
 .pink-separator{
   height: 3px;
   margin-top: 5px;
-  background-color: #d4fcfa;
+  background-color: #ffb375;
 }
 
 #navbar .navbar-nav li a:hover, #navbar .navbar-header a:hover {
