--- a/Main/templates/cover.html
+++ b/Main/templates/cover.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>Hello!</title>
+    <title>Hi!</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/100/three.min.js"></script>
     <script src="{% static 'js/vanta.birds.min.js' %}"></script>
     <link rel="stylesheet" href="{% static 'css/cover.css' %}">
