--- a/Main/templates/project_index.html
+++ b/Main/templates/project_index.html
@@ -75,7 +75,7 @@
         <div class="container-footer">
           <div class="footer">
             <hr class="footer-hr">
-            Made with ☕ and 🥑 by Eric Xu 
+            Made by Eric Xu 
 
           </div>
         </div>
