--- a/Main/templates/work.html
+++ b/Main/templates/work.html
@@ -76,7 +76,7 @@
       <div class="container-footer">
         <div class="footer">
           <hr class="footer-hr">
-          Made with ☕ and 🥑 by Eric Xu
+          Made by Eric Xu
         </div>
       </div>
 
