--- a/Main/templates/about.html
+++ b/Main/templates/about.html
@@ -9,6 +9,8 @@
   
   {% block styles %}{% endblock %}
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="{% static 'js/typing.js' %}"></script>
+  <script src="{% static 'js/skyline.js' %}"></script>
   <link href="https://fonts.googleapis.com/css2?family=Roboto" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
