--- a/Main/templates/about.html
+++ b/Main/templates/about.html
@@ -14,7 +14,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="{% static 'css/style1.css' %}">  
+  <link rel="stylesheet" href="{% static 'css/about.css' %}">  
 </head>
 
 <body>
